--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="manifest" href="./manifest.json" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <title>PBG Token Oracle Multi-Sig Client</title>
       <script type="module" crossorigin src="./index.js"></script>
     </head>
